...
        if self.isLastQuestion() {
            // идем в состоние "Результат квиза"
            let text = correctAnswers == self.questionsAmount ?
            "Поздравляем, вы ответили на 10 из 10!" :
            "Вы ответили на \(correctAnswers) из 10, попробуйте ещё раз!"
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            viewController?.show(result: viewModel)
        } else {
            self.switchToNextQuestion()
            // идем в состонияе "Вопрос показан"
...
